--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <header>
         <div class="logo">Creative Agency</div>
-        <div class="toggle active"></div>
-        <div class="navigation active">
+        <div class="toggle"></div>
+        <div class="navigation">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
@@ -43,7 +43,7 @@
         </div>
     </header>
     
-    <section>
+    <section class="home">
         <img src="images/home-img.jpg" class="home-img" alt="">
         <div class="home-content">
             <h1>We help to achieve <br>your goals</h1>
@@ -56,6 +56,6 @@
     </section>
     
 
-    <script src="script.js"></script>
+    <script src = "js/script.js"></script>
 </body>
 </html>
